<resources>
    <string name="app_name">那好吧</string>
    <string name="title_activity_searcher">SearcherActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_xfplayone">先锋一区</string>
    <string name="title_activity_xfplaytwo">先锋二区</string>
    <string name="title_activity_xfplaythree">先锋三区</string>
    <string name="navigation_drawer_open">打开分类导航</string>
    <string name="navigation_drawer_close">关闭分类导航</string>
    <string name="nav_header_title">导航</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">分类导航</string>
    <string name="action_one">最近更新</string>
    <string name="action_two">最受欢迎</string>
    <string name="action_three">评分最高</string>
    <string name="action_four">最新上映</string>
    <string name="action_five">本周热播</string>
    <string name="xfplayvideoshuoming"> 正在获取视频链接，获取成功后下方操作按钮出现，点击下方的按钮进行相关操作</string>

    <string name="title_activity_XfplayVideoDetailPage">详情页</string>
    <string name="btn" />
    <string name="btncollect">收藏</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="lastpage">前一页</string>
    <string name="gotopage">跳转</string>
    <string name="nextpage">下一页</string>
    <string name="quitpage">关闭</string>
    <string name="downloadshuoming">下载地址\n
        方式1:复制下方网址在浏览中打开即可下载\n
        方式2:通过qq传，qq好友对话框点击发送文件，选择应用，找到本app点击发送\n
        方式3:扫描下方二维码下载
    </string>
    <string name="saomiaoxiazai">二维码：扫描下方二维码下载 QQ-->动态-->扫一扫</string>
    <string name="title_activity_girls">GirlsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qvod_web">QvodWebActivity</string>
    <string name="title_activity_meizitu_picture">妹子图专辑</string>
    <string name="title_activity_info_album">InfoAlbumActivity</string>
    <string name="title_activity_info_picture">InfoPictureActivity</string>
    <string name="title_activity_x5_webview">那好吧</string>
    <string name="title_activity_online_web">OnlineWebActivity</string>
    <string name="title_activity_online_video_content">在线视频详情</string>
    <string name="onlineViewshuoming">在线视频说明\n稍等片刻正在请求视频资源中，获取资源后下方自动显示操作按钮,3456区请自行复制视频链接 到浏览器下载后观看</string>
    <string name="title_activity_movie">MovieActivity</string>

    <string name="title_activity_vip_video">更换接口</string>

    <string name="title_activity_text_webone">TextWeboneActivity</string>
    <string name="title_activity_txt_content">TxtContentActivity</string>
    <string name="zzhqzy">正在获取资源 ，请稍等片刻，请求内容成功后会自动进入阅读界面，如果超过30秒未请求到资源，请点击其他内容查看</string>
    <string name="title_activity_online_web2">AV淘宝</string>
    <string name="searchci">点击上方搜索图标输入搜索关键词</string>

</resources>
