<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.meizi.haokan.picture.InfoAlbumActivity">
    <item
        android:id="@+id/action_one"
        android:orderInCategory="100"
        android:title="@string/action_one"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_two"
        android:orderInCategory="100"
        android:title="@string/action_two"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_three"
        android:orderInCategory="100"
        android:title="@string/action_three"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_four"
        android:orderInCategory="100"
        android:title="@string/action_four"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_five"
        android:orderInCategory="100"
        android:title="@string/action_five"
        app:showAsAction="ifRoom" />
</menu>
